--- a/reflections/202208-making-is-a-political-act.html
+++ b/reflections/202208-making-is-a-political-act.html
@@ -2,6 +2,15 @@
 <!doctype html>
 <html lang="en-GB">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGWHDZMCF6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGWHDZMCF6');
+</script>
     <!-- 
       reference: 
       https://github.com/joshbuchea/HEAD 
