--- a/reflections/beef-raspberry-pi.html
+++ b/reflections/beef-raspberry-pi.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en-GB">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGWHDZMCF6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGWHDZMCF6');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -263,7 +272,7 @@ metasploit:
 
 <p>This allows:</p>
 <ul>
-<li>Browser exploits ’ System-level access</li>
+<li>Browser exploits ï¿½ System-level access</li>
 <li>Pivot from browser to network</li>
 <li>Deploy Meterpreter payloads</li>
 <li>Advanced post-exploitation</li>
