--- a/reflections/my-college-journey.html
+++ b/reflections/my-college-journey.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en-GB">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGWHDZMCF6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGWHDZMCF6');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -271,7 +280,7 @@
 
 <h2>The Bigger Picture</h2>
 
-<p>In India, we're conditioned to believe in a linear path: JEE ’ IIT ’ Package ’ Success.</p>
+<p>In India, we're conditioned to believe in a linear path: JEE ï¿½ IIT ï¿½ Package ï¿½ Success.</p>
 
 <p>But look at the real world:</p>
 
