--- a/reflections/skills-to-income.html
+++ b/reflections/skills-to-income.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en-GB">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGWHDZMCF6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGWHDZMCF6');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,10 +96,10 @@
 <p>In the Indian market, realistic pricing for students:</p>
 
 <ul>
-<li><strong>Basic landing page</strong>  ¹3,000 - ¹5,000</li>
-<li><strong>Small business website (3-5 pages)</strong>  ¹8,000 - ¹15,000</li>
-<li><strong>E-commerce store setup</strong>  ¹10,000 - ¹20,000</li>
-<li><strong>Maintenance packages</strong>  ¹1,000 - ¹2,000 per month</li>
+<li><strong>Basic landing page</strong>  ï¿½3,000 - ï¿½5,000</li>
+<li><strong>Small business website (3-5 pages)</strong>  ï¿½8,000 - ï¿½15,000</li>
+<li><strong>E-commerce store setup</strong>  ï¿½10,000 - ï¿½20,000</li>
+<li><strong>Maintenance packages</strong>  ï¿½1,000 - ï¿½2,000 per month</li>
 </ul>
 
 <p>Start lower to build your portfolio, then gradually increase rates as you gain experience and testimonials.</p>
@@ -123,9 +132,9 @@
 <h3>Pricing</h3>
 
 <ul>
-<li><strong>Hourly rate</strong>  ¹500 - ¹1,000 per hour</li>
-<li><strong>Flat rate for common tasks</strong>  ¹500 for software installation, ¹1,500 for OS setup</li>
-<li><strong>Monthly retainer</strong>  ¹2,000 - ¹5,000 for ongoing support to families/small businesses</li>
+<li><strong>Hourly rate</strong>  ï¿½500 - ï¿½1,000 per hour</li>
+<li><strong>Flat rate for common tasks</strong>  ï¿½500 for software installation, ï¿½1,500 for OS setup</li>
+<li><strong>Monthly retainer</strong>  ï¿½2,000 - ï¿½5,000 for ongoing support to families/small businesses</li>
 </ul>
 
 <h3>Building Trust</h3>
@@ -161,11 +170,11 @@
 
 <ul>
 <li><strong>Components cost</strong>  Actual cost of parts (Arduino, sensors, cables, etc.)</li>
-<li><strong>Labor/design fee</strong>  ¹2,000 - ¹10,000 depending on complexity</li>
+<li><strong>Labor/design fee</strong>  ï¿½2,000 - ï¿½10,000 depending on complexity</li>
 <li><strong>Markup</strong>  20-30% on components for sourcing and assembly</li>
 </ul>
 
-<p>Example: A basic home automation project might cost ¹3,000 in parts + ¹5,000 in labor = ¹8,000 total.</p>
+<p>Example: A basic home automation project might cost ï¿½3,000 in parts + ï¿½5,000 in labor = ï¿½8,000 total.</p>
 
 <h3>Starting Small</h3>
 
@@ -199,9 +208,9 @@
 <p>Start with one area where you're most confident. You can expand later.</p>
 
 <ul>
-<li>If you're good with code ’ Website development</li>
-<li>If you're a problem-solver ’ Technical support</li>
-<li>If you love hardware ’ Electronics/IoT</li>
+<li>If you're good with code ï¿½ Website development</li>
+<li>If you're a problem-solver ï¿½ Technical support</li>
+<li>If you love hardware ï¿½ Electronics/IoT</li>
 </ul>
 
 <h3>Step 2: Build a Portfolio</h3>
