--- a/reflections/zimaboard-experience.html
+++ b/reflections/zimaboard-experience.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en-GB">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGWHDZMCF6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGWHDZMCF6');
+</script>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dharun Ashokkumar: My Experience with the Zima Board 2</title>
 <meta name="description" content="Review of Zima Board 2 from IceWhale. Intel N100 quad-core, 8GB RAM, dual 2.5GbE. Performance testing with Iperf shows 1.09Gbps. Recommendations for portable firewall and home server use.">
