--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             also: i anchor <a href="https://dadscloud.com">dadscloud</a>.
             </p>
               <p>explore: <a href="timeline.html">timeline</a> · <a href="museum.html">internet museum</a> · <a href="resume.html">interactive resume</a></p>
-            <p><img src="img/box over head.png" title="image credit: meret vollenweider and sam nguyen, 201510" /></p>
+            <p><img src="img/Gemini_Generated_Image_rigndhrigndhrign.webp" title="image credit: meret vollenweider and sam nguyen, 201510" /></p>
             <p><a href="reflections.html">read my thoughts</a> on ^^ , or <a href="mailto:dharuna457@gmail.com?subject=hello.">say hello</a>.</p>
                         <div class="social-links">
                 <a href="https://github.com/dharuna457" title="github" target="_blank">
